clusters/homelab/apps/nginx/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: sandbox-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "cihuylabs.my.id"
        - "portfolio.cihuylabs.my.id"
        - "demo.cihuylabs.my.id"
        - "vote.cihuylabs.my.id"
